--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,9 @@ html{
 
 h1, h2, h3, h4, h5, h6, .label-bold, a.logo{
     font-family: Montserrat, Arial, Helvetica, sans-serif;
-    font-style: normal;
     color:#343434;
+    font-weight: bold;
+
 }
 
 p, .p-link, .p-small, label{
@@ -25,37 +26,32 @@ p, .p-link, .p-small, label{
 }
 
 h1{
-    font-size: 40px;
+    font-size: 2.5rem; /*40px*/
     font-weight: 700;
     line-height: 49px;
 }
 
 h2{
-    font-weight: bold;
     font-size: 1.875rem; /*30px*/
     line-height: 37px;
 }
 
 h3{
-    font-weight: bold;
     font-size: 1.5rem; /*24px*/
     line-height: 29px;
 }
 
 h4{
-    font-weight: bold;
     font-size: 1.125rem; /*18px*/
     line-height: 22px;
 }
 
 h5{
-    font-weight: bold;
     font-size: 1rem; /*16px*/
     line-height: 20px;
 }
 
 h6{
-    font-weight: bold;
     font-size: 0.875rem; /* 14px; */
     line-height: 17px;
 }
@@ -166,6 +162,7 @@ img{
     padding: 1rem 2rem;
     background: #0C0093;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    transition: none;
 }
 
 .btn-primary {
@@ -274,6 +271,15 @@ a.logo:hover{
 }
 
 
+.work-wrapper h3, .container-about h3, .container-contact h3, #contact h3, .slides-wrapper h3, #recommendation h3{
+    text-align: center;
+    padding-top: 5%;
+    padding-bottom: 3%;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+
 /********** Home Hero **********/
 
 #hero{
@@ -303,15 +309,7 @@ a.logo:hover{
 
 /********** Projects **********/
 
-.container-work h3, .container-about h3, .container-contact h3, #contact h3, .slides-wrapper h3, #recommendation h3{
-    text-align: center;
-    padding-top: 5%;
-    padding-bottom: 3%;
-    padding-left: 5%;
-    padding-right: 5%;
-}
-
-.container-work {
+.work-wrapper {
     align-items: center;
     background-color: #F8F8F8;
     padding-bottom: 5%;
