--- a/css/styles.css
+++ b/css/styles.css
@@ -228,13 +228,16 @@ img{
     position: fixed;
     top:0;
     z-index:1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
 
 nav{
-    float: right;
-    display:inline;
-
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 nav li {
