--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@ Background: #F8F8F8;
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700,400&family=Open+Sans:ital,wght@0,300;0,700;1,400&display=swap');
 
+
+/********** Media Queries **********/
 /********** Typography **********/
 
 html{
