--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ Background: #F8F8F8;
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700,400&family=Open+Sans:ital,wght@0,300;0,700;1,400&display=swap');
 
 
-/********** Media Queries **********/
 /********** Typography **********/
 
 html{
@@ -485,3 +484,34 @@ a.logo:hover{
     padding-left: 16px;
 }
 
+/********** Media Queries **********/
+
+
+/* ==============================
+Medium devices (320px and larger)
+================================= */
+@media only screen and (min-width: 320px) {
+}
+
+/* ==============================
+Medium devices (640px and larger)
+================================= */
+@media only screen and (min-width: 640px) {
+}
+
+/* ==============================
+Large devices (1024px or larger)
+================================= */
+@media only screen and (min-width: 1024px) {
+}
+/* ==============================
+X-large devices (1440px or larger)
+================================= */
+@media only screen and (min-width: 1440px) {
+}
+
+/* ==============================
+Extra-large devices (1920px or larger)
+================================= */
+@media only screen and (min-width: 1920px) {
+}
