--- a/css/styles.css
+++ b/css/styles.css
@@ -14,45 +14,61 @@ html{
     font-size: 100%;
 }
 
-h1, h2, h3, h4, h5, h6, .label-bold, a.logo{
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
-    color:#343434;
-    font-weight: bold;
-
+.name{
+    color:#FFA7A7
 }
+
+.job{
+    color:#0C0093
+}
+.past{
+    color: #FEED50;
+}
+
+/* h1, h2, h3, h4, h5, h6, .label-bold, a.logo{
+    font-family: , Arial, Helvetica, sans-serif;
+    color:#343434;
+    font-weight: 700;
+
+} */
 
 p, .p-link, .p-small, label{
     font-family: Open Sans, Arial, Helvetica, sans-serif;
-    font-style: normal;   
 }
 
 h1{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 2.5rem; /*40px*/
     font-weight: 700;
     line-height: 49px;
 }
 
 h2{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 1.875rem; /*30px*/
     line-height: 37px;
 }
 
 h3{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 1.5rem; /*24px*/
     line-height: 29px;
 }
 
 h4{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 1.125rem; /*18px*/
     line-height: 22px;
 }
 
 h5{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 1rem; /*16px*/
     line-height: 20px;
 }
 
 h6{
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
     font-size: 0.875rem; /* 14px; */
     line-height: 17px;
 }
@@ -64,7 +80,7 @@ body, p{
 }
 
 .p-link{
-    font-weight: bold;
+    font-weight: 700;
     font-size: 1.125rem; /*18px;*/
     line-height: 30px;
 }
@@ -82,7 +98,8 @@ label{
 }
 
 .label-bold{
-    font-weight: normal;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 700;
     font-size: 1rem; /*16px*/
     line-height: 20px;
 }
@@ -99,7 +116,7 @@ a:hover{
 a.text {
     text-decoration: underline;
     color:#0C0093;
-    font-weight: bold;
+    font-weight: 700;
 }
 a.text:hover, a.text:focus{
     color:#FFA7A7;
@@ -237,7 +254,7 @@ img{
 .logo{
     display: flex;
 }
-nav{
+.nav .brackets{
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -259,7 +276,7 @@ a.top-nav{
 
 a.top-nav:hover{
     color: #FDFF92;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 a.top-nav:active{
@@ -268,7 +285,8 @@ a.top-nav:active{
 }
 
 a.logo{
-    font-weight: bold;
+    font-family: Montserrat, Arial, Helvetica, sans-serif;
+    font-weight: 700;
     font-size: 18px;
     line-height: 20px;
     color: white;
@@ -277,7 +295,7 @@ a.logo{
 }
 
 a.logo:hover{
-    color: white;
+    color: #FDFF92;
     text-decoration: none;
 }
 
@@ -288,6 +306,33 @@ a.logo:hover{
     padding-bottom: 3%;
     padding-left: 5%;
     padding-right: 5%;
+}
+
+/* Brackets go out */
+
+.brackets a:before, .brackets a:after {
+    position: relative;
+    opacity: 0;
+    font-size: 16px;
+    top: 0px;
+    transition: all 0.5s;
+}
+
+.brackets a:before {
+    content: '(';
+    left: -5px;
+    transform: translateX(10px);
+}
+
+.brackets a:after{
+    content: ')';
+    right: -5px;
+    transform: translateX(-10px);
+}
+
+.brackets a:hover:before, .brackets a:hover:after{
+    opacity: 1;
+    transform: translateX(0px);
 }
 
 
@@ -313,8 +358,9 @@ a.logo:hover{
 .hero-cta{
     flex-basis: 50%;
     text-align: center;
-    max-width: 380px;
+    max-width: 400px;
     min-width: 320px;
+    padding: 2%;
     margin-top: 50px;
     margin-bottom: 50px; 
 }   
@@ -346,9 +392,6 @@ a.logo:hover{
     background-color: #F2F2F6;
     border-radius: 10px;
     margin-top: 1%;
-    margin-bottom:1%;
-    margin-right: 1%;
-    margin-left: 1%;
     width: 45%;
     min-width: 320px;
 }
@@ -378,7 +421,6 @@ a.logo:hover{
 
 .label-big {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
-    font-style: normal;
     color:#343434;
     font-weight: 400;
     font-size: 16px;
