--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -109,7 +109,7 @@ li p{
 
 .prj-flex-grid{
     display: flex;
-    flex-direction: row;
+    flex-direction: flex-start;
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 6em;
