--- a/css/styles.css
+++ b/css/styles.css
@@ -293,11 +293,15 @@ a.top-nav{
     font-weight: 700;
     color: white;
     padding: 0 10px;
+    
 }
 
 a.top-nav:hover{
     color: #FDFF92;
     text-decoration: underline;
+    text-decoration-color: #FDFF92;
+    text-decoration-thickness: 0.2em;
+    text-underline-offset: 1.5px;
 }
 
 a.top-nav:active{
@@ -318,8 +322,9 @@ a.logo{
 a.logo:hover{
     color: #FDFF92;
     text-decoration: none;
+    /* animation: bounce; 
+    animation-duration: 1s;  */
 }
-
 
 .work-wrapper h3, .container-about h3, .container-contact h3, #contact h3, .slides-wrapper h3, #recommendation h3{
     text-align: center;
@@ -368,7 +373,8 @@ a.logo:hover{
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
-    width: 100%;    
+    width: 100%;
+    height: 100vh;    
     padding-bottom: 5%;
     padding-top:5%;
 }
