--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -9,11 +9,11 @@ Grey bg: #F8F8F8;
 /*********** Linsenpate Intro **********/
 
 #lp-intro{
-    margin-top: 150px;
+    padding-top: 5%;
+    height: 100vh;
 }
 
 .lp-intro-flex-grid{
-    padding-bottom: 6%;
     display: flex;
     align-items: flex-end;
     flex-direction: row;
@@ -39,7 +39,7 @@ Grey bg: #F8F8F8;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    max-width: 450px;
+    max-width: 470px;
 }
 .project-cta .btn{
     max-width: 210px;
@@ -61,7 +61,6 @@ Grey bg: #F8F8F8;
 
 
 .table-flex-grid{
-    margin-top: 5%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -466,7 +465,6 @@ Small devices // Smaller than iPad (768px and smaller)
 
     #lp-intro{
         margin-top: 20%;
-        margin-bottom: 10%;
     }
     
     .prj-left-col-2-left{
