CSS Improvement on project layouts

--- a/css/styles_lp.css
+++ b/css/styles_lp.css
@@ -14,12 +14,12 @@ Grey bg: #F8F8F8;
 }
 
 .lp-intro-flex-grid{
+    padding-bottom: 6%;
     display: flex;
     align-items: flex-end;
     flex-direction: row;
     flex-wrap: wrap-reverse;
     justify-content: space-between;
-    margin-top: 6em;
 }
 
 .lp-intro-left{
@@ -41,13 +41,13 @@ Grey bg: #F8F8F8;
     align-items: center;
     max-width: 470px;
 }
-.project-cta .btn{
+.project-cta .button{
     max-width: 210px;
     margin-bottom: 6px;
     margin-top: 6px;
 }
 
-.project-cta .btn-secondary{
+.project-cta .button-secondary{
     max-width: 230px;
 }
 
@@ -515,18 +515,38 @@ Small devices // Smaller than iPad (768px and smaller)
 }   
 
 /* ==============================
-Large devices (1024px or larger)
+Large devices (smaller than 1024px)
 ================================= */
 @media only screen and (max-width: 1024px) {
+#lp-intro{
+    padding-top: 10%;
+    height: auto;
+    padding-bottom: 10%;
+    }
+
+#challenge{
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
+
+#design-system h2 {
+    color:#f1f1f1;
+    padding-top: 10%;
+    padding-bottom: 0%;
+}
+.ds-group h3{
+    margin-bottom: 0px;
+    }   
 }
 /* ==============================
-X-large devices (1440px or larger)
+X-large devices (smaller than 1440px)
 ================================= */
 @media only screen and (max-width: 1440px) {
 }
 
 /* ==============================
-Extra-large devices (1920px or larger)
+Extra-large devices (smaller than 1920px)
 ================================= */
 @media only screen and (max-width: 1920px) {
 }
